Add first stages of frontend to view-credentials endpoint.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,2 @@
-Create frontend page for view credential that sends the JWT token back to the backend for verification
+Create frontend page for view credential that sends the JWT token back to the backend for verification DONE
+Create frontend component to make an API call to view-credentials and display the users authorised credentials
