--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,3 @@
 Create frontend page for view credential that sends the JWT token back to the backend for verification DONE
-Create frontend component to make an API call to view-credentials and display the users authorised credentials
+Create frontend component to make an API call to view-credentials and display the users authorised credentials DONE
+Create add credentials to repo functionality
